Implementacion de tests para Cliente adaptados a DTOs